// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "../ccsds_mal/types.proto";
import "./HeaderMessage.proto";

package pusModelEditor.protobuf;

message CompareMessage {
extensions 4 to 104;

  optional ccsds_mal.protobuf.TIME firstDate = 1;
  optional ccsds_mal.protobuf.TIME secondDate = 2;
  optional pusModelEditor.protobuf.HeaderMessage headerMessage = 3;
}
