// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "../ccsds_mal/UINTEGER.proto";
import "./PusServiceApid.proto";

package pusModelEditor.protobuf;

message HeaderMessage {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UINTEGER sessionId = 1;
  optional ccsds_mal.protobuf.UINTEGER domainId = 2;
  optional ccsds_mal.protobuf.UINTEGER pusService = 3;
  repeated pusModelEditor.protobuf.PusServiceApid pusServiceApid = 4;
}
