// Produced by Acceleo Protobuf Generator 2.2.1-R12S2_alpha


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";

package pusModelEditor.protobuf;

message PusParameter {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.STRING parameterName = 2;
  optional ccsds_mal.protobuf.STRING value = 3;
}
