// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";
import "pusModelEditor/HeaderMessage.proto";

package pusModelEditor.protobuf;

message ResetMessage {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UINTEGER initialisationMode = 1;
  optional ccsds_mal.protobuf.UINTEGER resetType = 2;
  optional ccsds_mal.protobuf.TIME date = 3;
  optional pusModelEditor.protobuf.HeaderMessage headerMessage = 4;
}
