// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "./HeaderMessage.proto";

package pusModelEditor.protobuf;

message UnsubscribeMessage {
extensions 2 to 102;

  optional pusModelEditor.protobuf.HeaderMessage headerMessage = 1;
}
